Basic functionality to create liquidsoap configurations per channel added.
